<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.admin.inventario.MainActivity">

   <TextView
       android:textSize="30dp"
       android:layout_weight="0.5"
       android:background="@color/colorAccent"
       android:textColor="#FFFFFF"
       android:gravity="center"
       android:text="@string/inventario_de_equipos"
       android:layout_width="match_parent"
       android:layout_height="wrap_content" />

    <ImageView
        android:src="@mipmap/fotoinventario"
        android:layout_weight="4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/startAppBtn"
        android:textColor="#FFFFFF"
        android:background="@color/colorPrimary"
        android:layout_weight="1"
        android:text="@string/entrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <Button
        android:id="@+id/infoAppBtn"
        android:textColor="#FFFFFF"
        android:background="@color/colorAccent"
        android:text="@string/infoApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
